Fix random label overflow

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -74,7 +74,7 @@
 
     & div.label {
         border-top: 1px solid rgba(0, 0, 0, 0.2);
-        width: 100%;
+        max-width: 100%;
         font-size: 0.95rem;
         font-family: Arial, Helvetica, sans-serif;
         text-align: center;
